# python-automation-system

./: .gitignore  README.md  config.yaml  entrypoint.py  pyproject.toml
src/core/: processor.py  visualizer.py
tests/: test_processor.py
